--- a/scss/style.css
+++ b/scss/style.css
@@ -1,9 +1,12 @@
 @media screen and (min-width: 800px) {
+  html {
+    max-width: 97%;
+  }
   body {
-    overflow-x: hidden;
-    background-color: #000000;
+    background-color: #ffffff;
     padding: 0;
     margin: 0;
+    width: 100%;
   }
   button {
     background-color: transparent;
@@ -111,79 +114,81 @@
     margin-left: 60%;
   }
   .aboutmeContent {
-    background-color: transparent;
     width: 100%;
-    height: 100%;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-orient: horizontal;
+    height: 80vh;
+    background-color: transparent;
+    margin-bottom: 10%;
+  }
+  .aboutmeContent figure {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .aboutmeContent .leftAboutmeContent {
-    display: inline-block;
-    width: 25%;
-  }
-  .aboutmeContent .leftAboutmeContent img {
-    max-height: 80%;
-    margin: 15%;
-    -webkit-box-shadow: 0px 0px 45px 10px #b63551;
-            box-shadow: 0px 0px 45px 10px #b63551;
-  }
-  .aboutmeContent .centerAboutmeContent {
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin-left: 11%;
+  }
+  .aboutmeContent figure img {
+    position: absolute;
+    -ms-flex-item-align: baseline;
+        align-self: baseline;
+    height: 60%;
+    margin-top: 27%;
+    margin-left: 5%;
+    border: 2px solid #000000;
+  }
+  .aboutmeContent figure .img1 {
+    margin-top: 22%;
+  }
+  .aboutmeContent figure .img2 {
+    margin-left: 20%;
+  }
+  .aboutmeContent p {
+    position: relative;
+    color: #000000;
     font-family: 'Quicksand', sans-serif;
-    font-size: larger;
-    display: inline-block;
-    width: 28%;
-    color: #ffffff;
-    text-align: center;
+    font-size: 1.3rem;
+    text-align: justify;
+    margin-top: 10%;
+    margin-left: 55%;
+    margin-right: 2%;
   }
-  .aboutmeContent .rightAboutmeContent {
-    display: inline-block;
-  }
-  .aboutmeContent .rightAboutmeContent img {
-    -webkit-box-shadow: 40px 40px 25px #b63551;
-            box-shadow: 40px 40px 25px #b63551;
-    max-height: 65%;
-    margin-top: 30%;
-    margin-left: 22%;
+  .aboutmeContent h2 {
+    position: relative;
+    color: #000000;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-left: 5%;
   }
   .portifolioContent {
     background-color: transparent;
     height: 100vh;
     width: 100%;
+    margin-bottom: 5%;
   }
   .portifolioContent .leftPortifolioContent {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     width: 25%;
-    padding-top: 2%;
-  }
-  .portifolioContent .leftPortifolioContent img {
-    max-height: 80%;
-    margin-left: 20%;
-    padding-bottom: 10%;
   }
   .portifolioContent .leftPortifolioContent h2 {
-    color: #ffffff;
-    margin-left: 35%;
+    color: #000000;
+    margin-left: 20%;
     font-family: 'Quicksand', sans-serif;
     font-size: 50px;
     font-weight: bold;
   }
   .contactContent {
     color: #000000;
-    background-color: #b63551;
+    background-color: transparent;
     width: 100%;
     height: 90%;
     display: -ms-grid;
@@ -243,27 +248,27 @@
   }
   .contactContent .leftContactContent form input {
     width: 60%;
-    height: 15%;
+    height: 10%;
     border: 2px solid #000000;
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
     font-family: 'Quicksand', sans-serif;
     font-size: 20px;
-    color: #ffffff;
+    color: #000000;
     background-color: transparent;
     outline: none;
   }
   .contactContent .leftContactContent form textarea {
     width: 60%;
-    height: 30%;
+    height: 25%;
     border: 2px solid #000000;
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
     font-family: 'Quicksand', sans-serif;
     font-size: 20px;
-    color: #ffffff;
+    color: #000000;
     background-color: transparent;
     outline: none;
   }
@@ -319,13 +324,13 @@
     font-weight: 600;
   }
   .contactContent .rightContactContent a {
-    color: #ffffff;
+    color: #b63551;
     text-decoration: none;
   }
   footer {
     background-color: #000000;
-    width: 100%;
-    height: 10%;
+    width: 103%;
+    height: 12vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -343,8 +348,10 @@
     font-family: 'Quicksand', sans-serif;
     font-size: 20px;
     font-weight: bold;
-    padding: 10px;
-    margin: 10px;
+  }
+  footer a {
+    text-decoration: none;
+    color: #ffffff;
   }
 }
 
@@ -356,8 +363,8 @@
 
 .slides-front {
   padding: 0;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
   display: block;
   margin: auto;
   position: relative;
@@ -389,8 +396,8 @@
   position: absolute;
   -webkit-transform: scale(0);
           transform: scale(0);
-  -webkit-transition: all .7s ease-in-out 0.1s;
-  transition: all .7s ease-in-out 0.1s;
+  -webkit-transition: all .5s ease-in-out 0.1s;
+  transition: all .5s ease-in-out 0.1s;
 }
 
 .slide img {
@@ -413,7 +420,7 @@
   text-align: center;
   line-height: 380px;
   font-family: "Varela Round", sans-serif;
-  text-shadow: 0px 0px 15px #b63551;
+  text-shadow: 0px 0px 15px #000000;
 }
 
 .slide:hover + .nav label {
@@ -442,11 +449,29 @@ input:checked + .slide-container .nav label {
 
 .nav-dots {
   width: 100%;
-  bottom: 9px;
+  bottom: -50px;
   height: 11px;
   display: block;
   position: relative;
-  text-align: end;
+  text-align: center;
+}
+
+.nav-dots a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.nav-dots a:hover {
+  color: #b63551;
+}
+
+.nav-dots h3 {
+  margin-top: 35%;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  list-style: none;
 }
 
 .nav-dots .nav-dot {
@@ -467,7 +492,8 @@ input:checked + .slide-container .nav label {
 
 input#img-1:checked ~ .nav-dots label#img-dot-1,
 input#img-2:checked ~ .nav-dots label#img-dot-2,
-input#img-3:checked ~ .nav-dots label#img-dot-3 {
+input#img-3:checked ~ .nav-dots label#img-dot-3,
+input#img-4:checked ~ .nav-dots label#img-dot-4 {
   background: rgba(0, 0, 0, 0.8);
 }
 /*# sourceMappingURL=style.css.map */
