--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,16 @@ $colorBlue:rgb(0, 225, 255);
 $colorRose:rgb(182, 53, 81);
 
 @media screen and (min-width: 800px) {
+    html {
+        max-width: 97%;
+    }
+
     body {
-        overflow-x: hidden;
-        background-color: $primaryColor;
+        // overflow-x: hidden;
+        background-color: $colorWhite;
         padding: 0;
         margin: 0;
+        width: 100%;
     }
 
     //transparent button
@@ -47,8 +52,8 @@ $colorRose:rgb(182, 53, 81);
 
         .leftMainContent {
             background-color: $transparentColor;
-            
-            h2{
+
+            h2 {
                 color: $colorRose;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 55px;
@@ -58,15 +63,15 @@ $colorRose:rgb(182, 53, 81);
                 text-shadow: 2px -2px 2px #000000;
             }
         }
-        
-        .rightMainContent{
+
+        .rightMainContent {
             background-color: rgba(0, 0, 0, 0.6);
             width: 100vh;
             height: 100%;
             display: flex;
             flex-direction: column;
 
-            ul{
+            ul {
                 font-family: 'Quicksand', sans-serif;
                 list-style: none;
                 padding: 0;
@@ -75,25 +80,27 @@ $colorRose:rgb(182, 53, 81);
                 align-items: baseline;
                 width: 100%;
                 justify-content: space-evenly;
-                
-                li{
+
+                li {
                     float: left;
-                    
-                    a{
+
+                    a {
                         color: $colorWhite;
                         text-decoration: none;
                         font-size: 25px;
-                        font-weight: bold;  
+                        font-weight: bold;
                         padding: 0.2rem;
                     }
-                    &:hover{
-                        a{
+
+                    &:hover {
+                        a {
                             color: $colorRose;
                         }
                     }
                 }
             }
-            h1{
+
+            h1 {
                 color: $colorWhite;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 55px;
@@ -101,14 +108,16 @@ $colorRose:rgb(182, 53, 81);
                 text-align: center;
                 margin-top: 20%;
             }
-            p{
+
+            p {
                 color: $colorWhite;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 25px;
                 text-align: left;
                 margin: 10%;
             }
-            .contact{
+
+            .contact {
                 text-align: center;
                 margin-left: 60%;
             }
@@ -116,78 +125,89 @@ $colorRose:rgb(182, 53, 81);
     }
 
     .aboutmeContent {
-        background-color: $transparentColor;
         width: 100%;
-        height: 100%;
-        display: inline-flex;
-        flex-direction: row;
+        height: 80vh;
+        background-color: $transparentColor;
+        margin-bottom: 10%;
+        // display: inline-flex;
+        // flex-direction: row;
 
-        .leftAboutmeContent{
-            display: inline-block;
-            width: 25%;
-            img{
-                max-height: 80%;
-                margin: 15%;
-                box-shadow: 0px 0px 45px 10px $colorRose;
-        
-            }
-        }
-        .centerAboutmeContent{
+        figure {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            align-self: center;
-            margin-left: 11%;
-            font-family: 'Quicksand', sans-serif;
-            font-size: larger;
-            display: inline-block;
-            width: 28%;
-            color: $colorWhite;
-            text-align: center;
-        }
-        .rightAboutmeContent{
-            display: inline-block;
-            img{
-                box-shadow: 40px 40px 25px $colorRose;
-                max-height: 65%;
-                margin-top: 30%;
-                margin-left: 22%;
+
+            img {
+                position: absolute;
+                align-self: baseline;
+                height: 60%;
+                margin-top: 27%;
+                margin-left: 5%;
+                border: 2px solid $primaryColor;
+
             }
+
+            .img1 {
+                margin-top: 22%;
+            }
+
+            .img2 {
+                margin-left: 20%;
+            }
+        }
+
+        p {
+            position: relative;
+            color: $primaryColor;
+            font-family: 'Quicksand', sans-serif;
+            font-size: 1.3rem;
+            text-align: justify;
+            margin-top: 10%;
+            margin-left: 55%;
+            margin-right: 2%;
+        }
+
+        h2 {
+            position: relative;
+            color: $primaryColor;
+            font-family: 'Quicksand', sans-serif;
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-left: 5%;
         }
     }
-    .portifolioContent{
+
+    .portifolioContent {
 
         background-color: $transparentColor;
         height: 100vh;
         width: 100%;
-        
-        .leftPortifolioContent{
+        margin-bottom: 5%;
+
+        .leftPortifolioContent {
             display: inline-flex;
             width: 25%;
-            padding-top: 2%;
-            
-            img{
-                max-height: 80%;
-                margin-left: 20%;
-                padding-bottom: 10%;
-            }
 
-            h2{
-                color: $colorWhite;
-                margin-left: 35%;
+            h2 {
+                color: $primaryColor;
+                margin-left: 20%;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 50px;
                 font-weight: bold;
             }
         }
     }
-    .contactContent{
+
+    .contactContent {
         color: $primaryColor;
-        background-color: $colorRose;
+        background-color: $transparentColor;
         width: 100%;
         height: 90%;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        
-        .leftContactContent{
+
+        .leftContactContent {
             background-color: $transparentColor;
             width: 100%;
             height: 100%;
@@ -196,19 +216,19 @@ $colorRose:rgb(182, 53, 81);
             justify-content: center;
             align-items: center;
 
-            h2{
+            h2 {
                 color: $primaryColor;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 30px;
             }
 
-            p{
+            p {
                 font-family: 'Quicksand', sans-serif;
                 font-size: 20px;
                 font-weight: 600;
             }
 
-            form{
+            form {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -220,48 +240,52 @@ $colorRose:rgb(182, 53, 81);
                 padding: 10px;
                 margin: 10px;
                 border: 2px solid $primaryColor;
-                
-                input{
+
+                input {
                     width: 60%;
-                    height: 15%;
+                    height: 10%;
                     border: 2px solid $primaryColor;
                     border-radius: 5px;
                     padding: 10px;
                     margin: 10px;
                     font-family: 'Quicksand', sans-serif;
                     font-size: 20px;
-                    color: $colorWhite;
+                    color: $primaryColor;
                     background-color: $transparentColor;
                     outline: none;
                 }
-                textarea{
+
+                textarea {
                     width: 60%;
-                    height: 30%;
+                    height: 25%;
                     border: 2px solid $primaryColor;
                     border-radius: 5px;
                     padding: 10px;
                     margin: 10px;
                     font-family: 'Quicksand', sans-serif;
                     font-size: 20px;
-                    color: $colorWhite;
+                    color: $primaryColor;
                     background-color: $transparentColor;
                     outline: none;
                 }
-                button{
+
+                button {
                     color: $primaryColor;
                     border: 2px solid $primaryColor;
-                
+
                     &:hover {
                         color: $colorWhite;
                         background-color: $primaryColor;
                     }
                 }
+
                 ::placeholder {
                     color: $primaryColor;
                 }
             }
         }
-        .rightContactContent{
+
+        .rightContactContent {
             background-color: $transparentColor;
             width: 100%;
             height: 100%;
@@ -270,14 +294,14 @@ $colorRose:rgb(182, 53, 81);
             justify-content: center;
             align-items: center;
 
-            h2{
+            h2 {
                 color: $primaryColor;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 50px;
                 font-weight: bold;
             }
 
-            p{
+            p {
                 font-family: 'Quicksand', sans-serif;
                 font-size: 25px;
                 text-align: center;
@@ -285,16 +309,17 @@ $colorRose:rgb(182, 53, 81);
                 font-weight: 600;
             }
 
-            a{
-                color: $colorWhite;
+            a {
+                color: $colorRose;
                 text-decoration: none;
             }
         }
     }
-    footer {    
+
+    footer {
         background-color: $primaryColor;
-        width: 100%;
-        height: 10%;
+        width: 103%;
+        height: 12vh;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -303,116 +328,154 @@ $colorRose:rgb(182, 53, 81);
         font-family: 'Quicksand', sans-serif;
         font-size: 20px;
         font-weight: bold;
-        padding: 10px;
-        margin: 10px;
+
+        a {
+            text-decoration: none;
+            color: $colorWhite;
+        }
+
     }
 }
 
 
 
-//teste 
+//Definicoes do slider 
 
-.div-slider{
+.div-slider {
     width: auto;
     height: auto;
     text-align: center;
+}
+
+.slides-front {
+    padding: 0;
+    width: 90%;
+    height: 90%;
+    display: block;
+    margin: auto;
+    position: relative;
+}
+
+.slides-front * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+.slides-front input {
+    display: none;
+}
+
+.slide-container {
+    display: block;
+}
+
+.slide {
+    top: 0;
+    opacity: 0;
+    width: 100%;
+    height: 80%;
+    display: block;
+    position: absolute;
+
+    transform: scale(0);
+
+    transition: all .5s ease-in-out 0.1s;
+}
+
+.slide img {
+    max-width: 50%;
+}
+
+.nav label {
+    display: none;
+    position: absolute;
+    align-items: center;
+    opacity: 0;
+    z-index: 9;
+    cursor: pointer;
+    transition: opacity .2s;
+    color: #FFF;
+    font-size: 156pt;
+    text-align: center;
+    line-height: 380px;
+    font-family: "Varela Round", sans-serif;
+    text-shadow: 0px 0px 15px $primaryColor;
+}
+
+.slide:hover+.nav label {
+    opacity: 0.5;
+}
+
+.nav label:hover {
+    opacity: 1;
+}
+
+.nav .next {
+    right: 0;
+}
+
+input:checked+.slide-container .slide {
+    opacity: 1;
+
+    transform: scale(1);
+
+    transition: opacity 1s ease-in-out 0.1s;
+}
+
+input:checked+.slide-container .nav label {
+    display: block;
+}
+
+.nav-dots {
+    width: 100%;
+    bottom: -50px;
+    height: 11px;
+    display: block;
+    position: relative;
+    text-align: center;
+
+    a {
+        text-decoration: none;
+        color: $primaryColor;
+
+        &:hover {
+            color: $colorRose;
+        }
     }
-    .slides-front {
-        padding: 0;
-        width: 80%;
-        height: 80%;
-        display: block;
-        margin: auto;
-        position: relative;
+
+    h3 {
+        margin-top: 35%;
+        font-family: 'Quicksand', sans-serif;
+        font-size: 20px;
+        font-weight: bold;
+        text-decoration: none;
+        list-style: none;
     }
-    
-    .slides-front * {
-        user-select: none;
-        -ms-user-select: none;
-        -moz-user-select: none;
-        -khtml-user-select: none;
-        -webkit-user-select: none;
-        -webkit-touch-callout: none;
-    }
-    
-    .slides-front input { display: none; }
-    
-    .slide-container { display: block; }
-    
-    .slide {
-        top: 0;
-        opacity: 0;
-        width: 100%;
-        height: 80%;
-        display: block;
-        position: absolute;
-    
-        transform: scale(0);
-    
-        transition: all .7s ease-in-out 0.1s;
-    }
-    
-    .slide img {
-        max-width: 50%;
-    }
-    
-    .nav label {
-        display: none;
-        position: absolute;
-        align-items: center;
-        opacity: 0;
-        z-index: 9;
-        cursor: pointer;
-        transition: opacity .2s;
-        color: #FFF;
-        font-size: 156pt;
-        text-align: center;
-        line-height: 380px;
-        font-family: "Varela Round", sans-serif;
-        text-shadow: 0px 0px 15px $colorRose;
-    }
-    
-    .slide:hover + .nav label { opacity: 0.5; }
-    
-    .nav label:hover { opacity: 1; }
-    
-    .nav .next { right: 0; }
-    
-    input:checked + .slide-container  .slide {
-        opacity: 1;
-    
-        transform: scale(1);
-    
-        transition: opacity 1s ease-in-out 0.1s;
-    }
-    
-    input:checked + .slide-container .nav label { display: block; }
-    
-    .nav-dots {
-        width: 100%;
-        bottom: 9px;
-        height: 11px;
-        display: block;
-        position: relative;
-        text-align: end;
-    }
-    
-    .nav-dots .nav-dot {
-        top: 375px;
-        width: 11px;
-        height: 11px;
-        margin: 0 4px;
-        position: relative;
-        border-radius: 100%;
-        display: inline-block;
-        background-color: rgba(0, 0, 0, 0.6);
-    }
-    
-    .nav-dots .nav-dot:hover {
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    input#img-1:checked ~ .nav-dots label#img-dot-1,
-    input#img-2:checked ~ .nav-dots label#img-dot-2,
-    input#img-3:checked ~ .nav-dots label#img-dot-3{
-        background: rgba(0, 0, 0, 0.8);}
+}
+
+.nav-dots .nav-dot {
+    top: 375px;
+    width: 11px;
+    height: 11px;
+    margin: 0 4px;
+    position: relative;
+    border-radius: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.nav-dots .nav-dot:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+input#img-1:checked~.nav-dots label#img-dot-1,
+input#img-2:checked~.nav-dots label#img-dot-2,
+input#img-3:checked~.nav-dots label#img-dot-3,
+input#img-4:checked~.nav-dots label#img-dot-4 {
+    background: rgba(0, 0, 0, 0.8);
+}
